--- a/run/conf/inference.yaml
+++ b/run/conf/inference.yaml
@@ -53,5 +53,15 @@ labels:
 features:
   - "anglez"
   - "enmo"
+  # - "step"
+  # - "month_sin"
+  # - "month_cos"
   - "hour_sin"
   - "hour_cos"
+  # - "minute_sin"
+  # - "minute_cos"
+  # - "anglez_sin"
+  # - "anglez_cos"
+  - "enmo_1v_30m_mean"
+  # - "enmo_1v_120m_mean"
+  # - "anglez_1v_30m_mean"
