--- a/run/conf/dir/local.yaml
+++ b/run/conf/dir/local.yaml
@@ -1,5 +1,5 @@
-data_dir: /home/yuuki/Desktop/competitions/kaggle/kaggle-child-mind-institute-detect-sleep-states/data
-processed_dir: /home/yuuki/Desktop/competitions/kaggle/kaggle-child-mind-institute-detect-sleep-states/processed_data
-output_dir: /home/yuuki/Desktop/competitions/kaggle/kaggle-child-mind-institute-detect-sleep-states/output
-model_dir: /home/yuuki/Desktop/competitions/kaggle/kaggle-child-mind-institute-detect-sleep-states/output/train
-sub_dir: ./
+data_dir: D:/shinyi/datamining/kaggle-child-mind-institute-detect-sleep-states/data
+processed_dir: D:/shinyi/datamining/kaggle-child-mind-institute-detect-sleep-states/processed_data
+output_dir: D:/shinyi/datamining/kaggle-child-mind-institute-detect-sleep-states/data/output
+model_dir: D:/shinyi/datamining/kaggle-child-mind-institute-detect-sleep-states/data/output/train
+sub_dir: D:/shinyi/datamining/kaggle-child-mind-institute-detect-sleep-states/data/output/submission
