--- a/run/conf/train.yaml
+++ b/run/conf/train.yaml
@@ -69,7 +69,7 @@ features:
   # - "anglez_cos"
   - "enmo_1v_30m_mean"
   # - "enmo_1v_120m_mean"
-  # - "anglez_1v_30m_mean"
+  - "anglez_1v_30m_mean"
 
 # optimizer
 optimizer:
